--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 
 			l i b Q G L V i e w e r
 
-		   Copyright Gilles Debunne 2002-2005
-		Version #VERSION#-#RELEASE#. Packaged on #DATE#
-		         Gilles.Debunne@imag.fr
+		     Copyright 2002-2003-2004-2005
+		 Gilles Debunne (Gilles.Debunne@imag.fr)
+	      Version #VERSION#-#RELEASE#. Packaged on #DATE#
 
 libQGLViewer is an open source C++ library based on Qt that enables the quick creation 
 of OpenGL 3D viewers.  It features a powerful camera trackball and simple applications 
