--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,6 @@
 
 		l i b Q G L V i e w e r   C h a n g e L o g
-		       Copyright 2002-2003-2004-2005
+		     Copyright 2002-2003-2004-2005-2006
 		  Gilles Debunne (Gilles.Debunne@imag.fr)
 
 See doc/changeLog.html for details.
