--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 
                         l i b Q G L V i e w e r
 
-		     Copyright 2002-2003-2004-2005
+		    Copyright 2002-2003-2004-2005-2006
 		 Gilles Debunne (Gilles.Debunne@imag.fr)
 	      Version #VERSION#-#RELEASE#. Packaged on #DATE#
 
