--- a/INSTALL
+++ b/INSTALL
@@ -14,4 +14,5 @@ And then compile the examples:
 
 See doc/installUnix.html for details.
 
-Windows users should open doc/installWindows.html
+Instructions for Windows installation are available in
+doc/installWindows.html.
