--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,11 +1,11 @@
 
 		l i b Q G L V i e w e r   C h a n g e L o g
-		     Copyright 2002-2003-2004-2005-2006
+		  Copyright 2002-2003-2004-2005-2006-2007
 		  Gilles Debunne (Gilles.Debunne@imag.fr)
 
 See doc/changeLog.html for details.
 
-This is version #VERSION#-#RELEASE#. Packaged on #DATE#.
+This is version #VERSION#. Packaged on #DATE#.
 
 The latest versions and changeLog are available at:
 #WEBURL#/changeLog.html
