--- a/INSTALL
+++ b/INSTALL
@@ -7,11 +7,21 @@ libQGLViewer requires the Qt library, available from Digia.
 
 In order to compile the library from its sources:
 
-- On UNIX platforms, simply type (see doc/installUnix.html for details):
+- On UNIX platforms, using qmake, simply type (see doc/installUnix.html for details):
 
  > qmake
  > make
  > make install [optional]
+
+- On UNIX platforms, using cmake, simply type:
+
+ > mkdir build; cd build
+ > cmake ..
+ > make all install
+
+ Note: cmake will install a pkg-config file, that allows you to easily link with
+       libQGLViewer setting `PKG_CONFIG_PATH` and relying on `pkg-config`
+       (https://en.wikipedia.org/wiki/Pkg-config).
 
 - For Windows installation, see doc/installWindows.html.
 
