--- a/README
+++ b/README
@@ -1,31 +1,28 @@
 
                           l i b Q G L V i e w e r
 
-	      	 Version #VERSION#. Packaged on #DATE#
+          	 Version #VERSION#. Packaged on #DATE#
 
 
-  Copyright (C) 2002-2023 Gilles Debunne. All rights reserved.
-  #WEBURL#
-  Send e-mail to contact@libqglviewer.com
+Copyright (C) 2002-2023 Gilles Debunne. All rights reserved.
+#WEBURL#
+Send e-mail to contact@libqglviewer.com
 
 
 libQGLViewer is a C++ library based on Qt that eases the creation of OpenGL 3D viewers.
 
-It provides some of the  typical 3D viewer  functionalities, such as the possibility to
-move the camera using the mouse, which lacks  in most of the other APIs. Other features
-include mouse  manipulated  frames, interpolated  keyFrames,  object selection,  stereo 
+It provides some of the typical 3D viewer functionalities, such as the possibility to
+move the camera using the mouse, which lacks in most of the other APIs. Other features
+include mouse manipulated frames, interpolated keyFrames, object selection, stereo
 display, screenshot saving and much more. It can be used by OpenGL beginners as well as
 to create complex applications, being fully customizable and easy to extend.
 
-Based on the Qt  toolkit, it compiles on any architecture  (Unix-Linux, Mac,  Windows). 
-Full reference documentation and  many examples are provided.   libQGLViewer  does  not 
-display  3D scenes in various formats,  but it can be the base for the coding of such a 
+Based on the Qt toolkit, it compiles on any architecture (Unix-Linux, Mac, Windows).
+Full reference documentation and many examples are provided. libQGLViewer does not
+display 3D scenes in various formats, but it can be the base for the coding of such a
 viewer.
 
-libQGLViewer uses dual licensing: it is freely available under the terms of the GNU-GPL
-license for open source software development,  while  commercial applications can apply
-for a commercial license.
-
+libQGLViewer is freely available under the terms of the GNU-LGPL license.
 
 The library's main functionalities are:
 
@@ -35,7 +32,7 @@ The library's main functionalities are:
      - Definition and replay of keyFrame paths.
      - Stereo display (provided that your hardware supports it).
      - Clean, well-designed and easily extendable API.
-     - Many examples and a complete reference documentation. 
+     - Many examples and a complete reference documentation.
 
 See the doc/index.html page for details.
 
